--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "dependencies": {
     "expo": "^25.0.0",
     "react": "16.2.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz",
+    "react-native":
+      "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz",
     "react-navigation": "^1.5.8"
+  },
+  "devDependencies": {
+    "react-native-debugger-open": "^0.3.17"
+  },
+  "scripts": {
+    "postinstall": "rndebugger-open --expo"
   }
 }
